Add setup flow and admin platform APIs
Reworks the backend into a configurable Conferia platform by replacing the old seeded startup app with a bootstrap/setup flow, Flyway-managed schema, and file-based H2 configuration for local and Docker environments. Adds extensive admin/public APIs with new entities, repositories, DTOs, and services for site config, navigation, pages, media, localization, users, messaging, and schedule management, plus centralized error handling and updated security/CORS/JWT/email configuration. Includes new integration and service tests covering empty/populated startup, legacy schema compatibility, setup bootstrap behavior, config handling, and media serving.